<resources>
    <string name="app_name">Aparcar</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="register">Registrate</string>
    <string name="begin">Comenzar</string>

    <string name="emailHint">email</string>
    <string name="passwordHint">contraseña</string>
    <string name="rePasswordHint">reingrese la contraseña</string>
    <string name="rePasswordError">Las contraseñas deben ser iguales</string>
    <string name="activateCodeHint">ingresa el codigo</string>
    <string name="activate">Activar</string>
    <string name="activateMessage">Hemos enviado un código de activación a tu cuenta de email, por favor ingresalo a continuación y presiona activar.</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="creditCardHint">Tarjeta de Crédito</string>
    <string name="cvvHint">cvv</string>
    <string name="nameHint">nombre</string>
    <string name="monthHint">mes</string>
    <string name="yearHint">año</string>
    <string name="documentHint">numero</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_san">SanActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
