<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivateActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activateCodeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="340dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="#E0E0E0"
        app:boxCornerRadiusBottomEnd="50dp"
        app:boxCornerRadiusBottomStart="50dp"
        app:boxCornerRadiusTopEnd="50dp"
        app:boxCornerRadiusTopStart="50dp"
        app:boxStrokeColor="#FFFFFF"

        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activateCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activateCodeHint"
            android:paddingStart="20dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/activate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activateCodeLayout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activateMessage"
        android:textAlignment="center"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>